update icon & login with facebook & onboarding

--- a/app/src/main/res/drawable/bg_tab_selected.xml
+++ b/app/src/main/res/drawable/bg_tab_selected.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
        android:shape="rectangle">
-    <solid android:color="@color/primary" />
-    <corners android:radius="6dp" />
+    <!-- Sử dụng màu nền nhẹ để báo hiệu tab được chọn -->
+    <solid android:color="@color/primary_light" />
+    <!-- Bo tròn góc -->
+    <corners android:radius="8dp" />
 </shape>
