--- a/app/src/main/res/drawable/bg_tab_unselected.xml
+++ b/app/src/main/res/drawable/bg_tab_unselected.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-       android:shape="rectangle">
+    android:shape="rectangle">
+    <!-- Màu nền trong suốt cho tab không được chọn -->
     <solid android:color="@android:color/transparent" />
-    <corners android:radius="6dp" />
+    <!-- Bo tròn góc -->
+    <corners android:radius="8dp" />
 </shape>
