--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -188,8 +188,7 @@
             <ImageView
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:src="@drawable/ic_calendar"
-                app:tint="@android:color/darker_gray"/>
+                android:src="@drawable/ic_calendar"/>
 
         </LinearLayout>
 
