--- a/app/src/main/res/layout/fragment_search_result.xml
+++ b/app/src/main/res/layout/fragment_search_result.xml
@@ -111,8 +111,7 @@
                     <ImageView
                             android:layout_width="18dp"
                             android:layout_height="18dp"
-                            android:src="@drawable/ic_calendar"
-                            app:tint="@color/text_secondary" />
+                            android:src="@drawable/ic_calendar"/>
 
                     <TextView
                             android:id="@+id/textStartDate"
@@ -150,8 +149,7 @@
                     <ImageView
                             android:layout_width="18dp"
                             android:layout_height="18dp"
-                            android:src="@drawable/ic_calendar"
-                            app:tint="@color/text_secondary" />
+                            android:src="@drawable/ic_calendar" />
 
                     <TextView
                             android:id="@+id/textEndDate"
